--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ notes/adjoint_wavelet_notes.pdf
 notes/adjoint_wavelet_notes.toc
 
 notes/figures/*_trim.pdf
+
+ieee_spm/adjoint_wavelet.aux
+ieee_spm/adjoint_wavelet.log
+ieee_spm/adjoint_wavelet.pdf
+ieee_spm/ieee_spm_jan_2016_lecture_note_polyphase_channelizer_demystified.pdf
+ieee_spm/ieee_spm_nov_2015_lecture_note_relationship_between_least_mean_square_and_kalman_filters.pdf
+ieee_spm/ieee_spm_sep_2015_lecture_note_projection_based_wavelet_denoising.pdf
+ieee_spm/ieee_templates/
