--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ ieee_spm/ieee_spm_jan_2016_lecture_note_polyphase_channelizer_demystified.pdf
 ieee_spm/ieee_spm_nov_2015_lecture_note_relationship_between_least_mean_square_and_kalman_filters.pdf
 ieee_spm/ieee_spm_sep_2015_lecture_note_projection_based_wavelet_denoising.pdf
 ieee_spm/ieee_templates/
+
+siam_framsc_slides/siam_framsc_slides.aux
+siam_framsc_slides/siam_framsc_slides.log
+siam_framsc_slides/siam_framsc_slides.nav
+siam_framsc_slides/siam_framsc_slides.out
+siam_framsc_slides/siam_framsc_slides.pdf
+siam_framsc_slides/siam_framsc_slides.snm
+siam_framsc_slides/siam_framsc_slides.toc
