--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ siam_framsc_slides/siam_framsc_slides.out
 siam_framsc_slides/siam_framsc_slides.pdf
 siam_framsc_slides/siam_framsc_slides.snm
 siam_framsc_slides/siam_framsc_slides.toc
+
+bce_unconstrained_formulation/recovery_plots/
